--- a/p5_project/index.html
+++ b/p5_project/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-    <title>Quiz 8</title>
+    <title>Major_Project</title>
 
     <link rel="stylesheet" type="text/css" href="style.css">
 
